tests/errors/range-empty-field.ssv
name:string | age:uint8(18..120)
Alice
